--- a/src/Csi.HostPath.Controller/Csi.HostPath.Controller.Application/Csi.HostPath.Controller.Application.csproj
+++ b/src/Csi.HostPath.Controller/Csi.HostPath.Controller.Application/Csi.HostPath.Controller.Application.csproj
@@ -5,24 +5,26 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
-
+    
     <ItemGroup>
       <ProjectReference Include="..\Csi.HostPath.Controller.Domain\Csi.HostPath.Controller.Domain.csproj" />
     </ItemGroup>
 
-
-
     <ItemGroup>
+        
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
       <PackageReference Include="FluentValidation" Version="11.6.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.6.0" />
+      <PackageReference Include="Google.Protobuf" Version="3.24.1" />
+      <PackageReference Include="Grpc.Net.Client" Version="2.55.0" />
+      <PackageReference Include="Grpc.Tools" Version="2.57.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="MediatR" Version="12.1.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
     </ItemGroup>
-
-
-
-
 
 
 
