--- a/deploy/rusa-csi-driver-host-path/templates/csi-controller.yaml
+++ b/deploy/rusa-csi-driver-host-path/templates/csi-controller.yaml
@@ -1,65 +1,57 @@
 ---
-kind: StatefulSet
+kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: csi-hostpath-socat
+  name: {{ include "csi-name" . }}
   labels:
-    app.kubernetes.io/instance: hostpath.csi.k8s.io
-    app.kubernetes.io/part-of: csi-driver-host-path
-    app.kubernetes.io/name: csi-hostpath-socat
-    app.kubernetes.io/component: socat
+    {{- include "csi-controller-labels" . | nindent 4 }}
 spec:
-  serviceName: "csi-hostpath-socat"
-  replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/instance: hostpath.csi.k8s.io
-      app.kubernetes.io/part-of: csi-driver-host-path
-      app.kubernetes.io/name: csi-hostpath-socat
-      app.kubernetes.io/component: socat
+      {{- include "csi-controller-labels" . | nindent 6 }}
+  replicas: 1
   template:
     metadata:
       labels:
-        app.kubernetes.io/instance: hostpath.csi.k8s.io
-        app.kubernetes.io/part-of: csi-driver-host-path
-        app.kubernetes.io/name: csi-hostpath-socat
-        app.kubernetes.io/component: socat
+        {{- include "csi-controller-labels" . | nindent 8 }}
     spec:
-      affinity:
-        podAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: app.kubernetes.io/instance
-                operator: In
-                values:
-                  - hostpath.csi.k8s.io
-            topologyKey: kubernetes.io/hostname
+      serviceAccountName: {{ include "csi-name" . }}
       containers:
-        - name: socat
-          image: docker.io/alpine/socat:1.7.4.3-r0
-          args:
-            - tcp-listen:10000,fork,reuseaddr
-            - unix-connect:/csi/csi.sock
-          securityContext:
-            # This is necessary only for systems with SELinux, where
-            # non-privileged sidecar containers cannot access unix domain socket
-            # created by privileged CSI driver container.
-            privileged: true
-          volumeMounts:
-          - mountPath: /csi
-            name: socket-dir
-          # This is used for sanity testing because the pod name of the
-          # driver itself is non-deterministic when using a daemonset.
-          - mountPath: /var/lib/kubelet/pods
-            mountPropagation: Bidirectional
-            name: mountpoint-dir
-      volumes:
-        - hostPath:
-            path: /var/lib/kubelet/plugins/csi-hostpath
-            type: DirectoryOrCreate
+      - name: csi-attacher
+        image: registry.k8s.io/sig-storage/csi-attacher:v4.1.0
+        args:
+        - --default-fstype=ext4
+        volumeMounts:
+        - name: socket-dir
+          mountPath: /run/csi
+      - name: csi-resizer
+        image: registry.k8s.io/sig-storage/csi-resizer:v1.7.0
+        volumeMounts:
+        - name: socket-dir
+          mountPath: /run/csi
+      - name: csi-provisioner
+        image: registry.k8s.io/sig-storage/csi-provisioner:v3.4.0
+        args:
+        - --feature-gates=Topology=true
+        - --default-fstype=ext4
+        volumeMounts:
+        - name: socket-dir
+          mountPath: /run/csi
+      - name: host-path-csi
+        image: ruslansavchuk/rusa-hostpath-csi-controller:0.0.1
+        imagePullPolicy: Always
+        env:
+        - name: ConfigurationOptions__UnixSocket
+          value: unix:///run/csi/socket
+        volumeMounts:
+        - name: socket-dir
+          mountPath: /run/csi
+      - name: liveness-probe
+        imagePullPolicy: Always
+        image: registry.k8s.io/sig-storage/livenessprobe:v2.9.0
+        volumeMounts:
+        - mountPath: /run/csi
           name: socket-dir
-        - hostPath:
-            path: /var/lib/kubelet/pods
-            type: DirectoryOrCreate
-          name: mountpoint-dir
+      volumes:
+      - name: socket-dir
+        emptyDir: {}
