--- a/deploy/rusa-csi-driver-host-path/values.yaml
+++ b/deploy/rusa-csi-driver-host-path/values.yaml
@@ -1,4 +1,5 @@
 pluginName: hostpath.csi.k8s.io
+serviceName: hostpath-csi-controller
 controllerStateDir: /tmp/state
 nodeDataDir: /tmp/data
 setAsDefault: true
