--- a/deploy/rusa-csi-driver-host-path/templates/csi-service.yaml
+++ b/deploy/rusa-csi-driver-host-path/templates/csi-service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "csi-name" . }}
+  name: {{ include "csi-controller-service-name" . }}
   labels:
     {{- include "csi-controller-service-labels" . | nindent 4 }}
 spec:
