--- a/src/Csi.HostPath.Controller/Csi.HostPath.Controller.Api/Csi.HostPath.Controller.Api.csproj
+++ b/src/Csi.HostPath.Controller/Csi.HostPath.Controller.Api/Csi.HostPath.Controller.Api.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
       <Protobuf Include="..\..\Protos\csi.proto" GrpcServices="Server" Link="Protos\csi.proto" />
         
       <PackageReference Include="Grpc.AspNetCore" Version="2.55.0" />
@@ -17,6 +19,8 @@
       <ProjectReference Include="..\Csi.HostPath.Controller.Application\Csi.HostPath.Controller.Application.csproj" />
       <ProjectReference Include="..\Csi.HostPath.Controller.Infrastructure\Csi.HostPath.Controller.Infrastructure.csproj" />
     </ItemGroup>
+
+
 
 
 
