--- a/src/Csi.HostPath.Node/Csi.HostPath.Node.Api/appsettings.json
+++ b/src/Csi.HostPath.Node/Csi.HostPath.Node.Api/appsettings.json
@@ -10,5 +10,26 @@
       "Protocols": "Http2"
     }
   },
+  "Serilog": {
+    "Using": [
+      "Serilog.Settings.Configuration"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Hangfire": "Warning",
+        "Sentry": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "formatter": "Serilog.Formatting.Json.JsonFormatter"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
