--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - id: Get commit info
+      - id: commit
+        name: Get commit info
         uses: prompt/actions-commit-hash@v3
 
       - name: Login to Docker Hub
