--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,3 +42,14 @@ jobs:
           file: ./src/Dockerfile-node
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/rusa-hostpath-csi-controller:${{ steps.commit.outputs.short }}
+
+      - name: Prepare build artifacts
+        run: |
+          sed -i 's/version: 0.0.1/version: ${{ steps.commit.outputs.short }}/g' ./deploy/rusa-csi-driver-host-path/Chart.yaml
+          tar -zcvf rusa-csi-driver-host-path.tar.gz ./deploy/rusa-csi-driver-host-path
+
+      - name: Publish build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: rusa-csi-driver-host-path
+          path: rusa-csi-driver-host-path.tar.gz
