--- a/deploy/rusa-csi-driver-host-path/Chart.yaml
+++ b/deploy/rusa-csi-driver-host-path/Chart.yaml
@@ -3,4 +3,4 @@ name: rusa-csi-driver-host-path
 description: A Helm chart for Kubernetes
 type: application
 version: 0.0.1
-appVersion: "1.16.0"
+appVersion: 0.0.1
