Update project structure

--- a/src/Csi.HostPath.Node/Csi.HostPath.Node.Api/Csi.HostPath.Node.Api.csproj
+++ b/src/Csi.HostPath.Node/Csi.HostPath.Node.Api/Csi.HostPath.Node.Api.csproj
@@ -13,4 +13,12 @@
         <Protobuf Include="..\..\Protos\csi.proto" GrpcServices="Server" Link="Protos\csi.proto" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.55.0" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Csi.HostPath.Node.Infrastructure\Csi.HostPath.Node.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Grpc\Services\" />
+    </ItemGroup>
 </Project>
