--- a/src/Dockerfile-controller
+++ b/src/Dockerfile-controller
@@ -12,7 +12,8 @@ COPY Csi.HostPath.Controller Csi.HostPath.Controller
 COPY Protos Protos
 
 FROM build AS publish
-RUN dotnet publish "Csi.HostPath.Controller/Csi.HostPath.Controller.Api/Csi.HostPath.Controller.Api.csproj" -c Release -o /app/publish
+ARG version="1.0.0.2"
+RUN dotnet publish "Csi.HostPath.Controller/Csi.HostPath.Controller.Api/Csi.HostPath.Controller.Api.csproj" -c Release -p:Version=$version -o /app/publish
 
 FROM base AS final
 WORKDIR /app
