--- a/src/Dockerfile-node
+++ b/src/Dockerfile-node
@@ -11,7 +11,8 @@ COPY Csi.HostPath.Node Csi.HostPath.Node
 COPY Protos Protos
 
 FROM build AS publish
-RUN dotnet publish "Csi.HostPath.Node/Csi.HostPath.Node.Api/Csi.HostPath.Node.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG version="1.0.0.2"
+RUN dotnet publish "Csi.HostPath.Node/Csi.HostPath.Node.Api/Csi.HostPath.Node.Api.csproj" -c Release  -p:Version=$version -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
