--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ on:
       - "main"
       - "develop"
       - "feature/*"
+    tags:
+      - "*"
 
 jobs:
   build:
@@ -18,6 +20,16 @@ jobs:
       - id: commit
         name: Get commit info
         uses: prompt/actions-commit-hash@v3
+
+      - name: Set build version
+        id: versioning
+        run: |
+          if [[ -n "$GITHUB_REF" && "$GITHUB_REF" == refs/tags/* ]]; then
+            BUILD_VERSION="${GITHUB_REF#refs/tags/}"
+          else
+            BUILD_VERSION="${{ steps.commit.outputs.short }}"
+          fi
+          echo "value=$BUILD_VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -34,6 +46,8 @@ jobs:
           context: ./src/
           file: ./src/Dockerfile-node
           push: true
+          build-args: |
+            BUILD_VERSION=${{ steps.versioning.outputs.value }}
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/rusa-hostpath-csi-node:${{ steps.commit.outputs.short }}
 
       - name: Build and push Controller images
@@ -42,6 +56,8 @@ jobs:
           context: ./src/
           file: ./src/Dockerfile-node
           push: true
+          build-args: |
+            BUILD_VERSION=${{ steps.versioning.outputs.value }}
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/rusa-hostpath-csi-controller:${{ steps.commit.outputs.short }}
 
       - name: Prepare build artifacts
