--- a/src/Dockerfile-controller
+++ b/src/Dockerfile-controller
@@ -12,8 +12,9 @@ COPY Csi.HostPath.Controller Csi.HostPath.Controller
 COPY Protos Protos
 
 FROM build AS publish
-ARG version="1.0.0.2"
-RUN dotnet publish "Csi.HostPath.Controller/Csi.HostPath.Controller.Api/Csi.HostPath.Controller.Api.csproj" -c Release -p:Version=$version -o /app/publish
+ARG BUILD_VERSION=0.0.1
+ENV VERSION=$BUILD_VERSION
+RUN dotnet publish "Csi.HostPath.Controller/Csi.HostPath.Controller.Api/Csi.HostPath.Controller.Api.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
