--- a/src/Dockerfile-node
+++ b/src/Dockerfile-node
@@ -11,8 +11,9 @@ COPY Csi.HostPath.Node Csi.HostPath.Node
 COPY Protos Protos
 
 FROM build AS publish
-ARG version="1.0.0.2"
-RUN dotnet publish "Csi.HostPath.Node/Csi.HostPath.Node.Api/Csi.HostPath.Node.Api.csproj" -c Release  -p:Version=$version -o /app/publish /p:UseAppHost=false
+ARG BUILD_VERSION=0.0.1
+ENV VERSION=$BUILD_VERSION
+RUN dotnet publish "Csi.HostPath.Node/Csi.HostPath.Node.Api/Csi.HostPath.Node.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
