--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           if [[ -n "$GITHUB_REF" && "$GITHUB_REF" == refs/tags/* ]]; then
             BUILD_VERSION="${GITHUB_REF#refs/tags/}"
           else
-            BUILD_VERSION="${{ steps.commit.outputs.short }}"
+            BUILD_VERSION="v0.0.0-${{ steps.commit.outputs.short }}"
           fi
           echo "value=$BUILD_VERSION" >> "$GITHUB_OUTPUT"
 
