--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,9 @@ jobs:
     needs:
       - versioning
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -62,6 +65,9 @@ jobs:
     needs:
       - versioning
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -89,6 +95,9 @@ jobs:
       - build-controller
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Prepare build artifacts
         run: |
           sed -i 's/version: 0.0.1/version: ${{ needs.versioning.outputs.version }}/g' ./deploy/rusa-csi-driver-host-path/Chart.yaml
