--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,6 +87,21 @@ jobs:
             BUILD_VERSION=${{ needs.versioning.outputs.version }}
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/rusa-hostpath-csi-node:${{ needs.versioning.outputs.version }}
 
+  run-api-tests:
+    runs-on: ubuntu-latest
+    needs:
+      - versioning
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Execute API tests
+        timeout-minutes: 5
+        run: docker compose -f docker-compose-controller-api-tests.yaml up --build --abort-on-container-exit || exit 0
+
   publish-build-artifacts:
     runs-on: ubuntu-latest
     needs:
