--- a/src/Csi.HostPath.Node/Csi.HostPath.Node.Api/Csi.HostPath.Node.Api.csproj
+++ b/src/Csi.HostPath.Node/Csi.HostPath.Node.Api/Csi.HostPath.Node.Api.csproj
@@ -10,7 +10,7 @@
     <ItemGroup>
         <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
-        <Protobuf Include="..\..\Protos\csi.proto" GrpcServices="Server" Link="Protos\csi.proto" />
+        <Protobuf Include="..\..\..\protos\csi.proto" GrpcServices="Server" Link="Protos\csi.proto" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.55.0" />
     </ItemGroup>
 
