--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,10 +87,13 @@ jobs:
             BUILD_VERSION=${{ needs.versioning.outputs.version }}
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/rusa-hostpath-csi-node:${{ needs.versioning.outputs.version }}
 
-  run-api-tests:
+  run-controller-api-tests:
     runs-on: ubuntu-latest
     needs:
-      - versioning
+      - build-controller
+    permissions:
+      checks: write
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -119,7 +122,7 @@ jobs:
     needs:
       - versioning
       - build-node
-      - build-controller
+      - run-controller-api-tests
 
     steps:
       - name: Checkout
