--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,11 +117,41 @@ jobs:
           files: |
             **/*.trx
 
+  run-node-api-tests:
+    runs-on: ubuntu-latest
+    needs:
+      - build-node
+    permissions:
+      checks: write
+      pull-requests: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Execute API tests
+        timeout-minutes: 5
+        run: |
+          docker compose -f docker-compose-node-api-tests.yaml up --build --abort-on-container-exit || exit 0
+          docker run -d --rm --name dummy -v test-results:/tr alpine tail -f /dev/null
+          docker cp dummy:/tr/testresults.trx testresults.trx
+          docker stop dummy
+          docker compose -f docker-compose-node-api-tests.yaml rm -fsv
+
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action/composite@v2
+        if: always()
+        with:
+          files: |
+            **/*.trx
+
   publish-build-artifacts:
     runs-on: ubuntu-latest
     needs:
       - versioning
-      - build-node
+      - run-node-api-tests
       - run-controller-api-tests
 
     steps:
