--- a/.github/workflows/create-new-branch-on-issue-assigned.yaml
+++ b/.github/workflows/create-new-branch-on-issue-assigned.yaml
@@ -29,5 +29,7 @@ jobs:
       - name: Create Branch
         run: |
           BRANCH_NAME="feature/${{ github.event.issue.number }}"
+          git config user.email "${{ secrets.GITHUB_ACTOR }}@users.noreply.github.com"
+          git config user.name "${{ secrets.GITHUB_ACTOR }}"
           git checkout -b "$BRANCH_NAME"
           git push origin "$BRANCH_NAME"
