--- a/.github/workflows/close-issue-on-completed-pr.yaml
+++ b/.github/workflows/close-issue-on-completed-pr.yaml
@@ -24,8 +24,8 @@ jobs:
             curl -X POST \
               -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
               -H "Accept: application/vnd.github.v3+json" \
-              "https://api.github.com/repos/${{ github.repository }}/issues/${ISSUE_ID}/comments" \
-              -d '{"body":"This issue has been automatically closed by merging the associated pull request."}'
+              "https://api.github.com/repos/${{ github.repository }}/issues/${ISSUE_ID}" \
+              -d '{"state":"closed"}'
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
