--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -168,3 +168,37 @@ jobs:
         with:
           name: rusa-csi-driver-host-path
           path: ./deploy/rusa-csi-driver-host-path
+
+  release:
+    needs:
+      - publish-build-artifacts
+      - versioning
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: rusa-csi-driver-host-path
+
+      - name: Create GitHub Release
+        id: create-release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ needs.versioning.outputs.version }}
+          release_name: Release ${{ needs.versioning.outputs.version }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create-release.outputs.upload_url }}
+          asset_path: rusa-csi-driver-host-path.zip
+          asset_name: rusa-csi-driver-host-path.zip
+          asset_content_type: application/zip
