--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -50,15 +50,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push Controller images
-        uses: docker/build-push-action@v5
-        with:
-          context: ./
-          file: ./Dockerfile-controller
-          push: true
-          build-args: |
-            BUILD_VERSION=${{ needs.versioning.outputs.version }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/rusa-hostpath-csi-controller:${{ needs.versioning.outputs.version }}
+      # - name: Build and push Controller images
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: ./
+      #     file: ./Dockerfile-controller
+      #     push: true
+      #     build-args: |
+      #       BUILD_VERSION=${{ needs.versioning.outputs.version }}
+      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/rusa-hostpath-csi-controller:${{ needs.versioning.outputs.version }}
 
   build-node:
     runs-on: ubuntu-latest
@@ -77,15 +77,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push Node images
-        uses: docker/build-push-action@v5
-        with:
-          context: ./
-          file: ./Dockerfile-node
-          push: true
-          build-args: |
-            BUILD_VERSION=${{ needs.versioning.outputs.version }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/rusa-hostpath-csi-node:${{ needs.versioning.outputs.version }}
+      # - name: Build and push Node images
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: ./
+      #     file: ./Dockerfile-node
+      #     push: true
+      #     build-args: |
+      #       BUILD_VERSION=${{ needs.versioning.outputs.version }}
+      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/rusa-hostpath-csi-node:${{ needs.versioning.outputs.version }}
 
   run-controller-api-tests:
     runs-on: ubuntu-latest
@@ -101,21 +101,21 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Execute API tests
-        timeout-minutes: 5
-        run: |
-          docker compose -f docker-compose-controller-api-tests.yaml up --build --abort-on-container-exit || exit 0
-          docker run -d --rm --name dummy -v test-results:/tr alpine tail -f /dev/null
-          docker cp dummy:/tr/testresults.trx testresults.trx
-          docker stop dummy
-          docker compose -f docker-compose-controller-api-tests.yaml rm -fsv
+      # - name: Execute API tests
+      #   timeout-minutes: 5
+      #   run: |
+      #     docker compose -f docker-compose-controller-api-tests.yaml up --build --abort-on-container-exit || exit 0
+      #     docker run -d --rm --name dummy -v test-results:/tr alpine tail -f /dev/null
+      #     docker cp dummy:/tr/testresults.trx testresults.trx
+      #     docker stop dummy
+      #     docker compose -f docker-compose-controller-api-tests.yaml rm -fsv
 
-      - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action/composite@v2
-        if: always()
-        with:
-          files: |
-            **/*.trx
+      # - name: Publish Test Results
+      #   uses: EnricoMi/publish-unit-test-result-action/composite@v2
+      #   if: always()
+      #   with:
+      #     files: |
+      #       **/*.trx
 
   run-node-api-tests:
     runs-on: ubuntu-latest
@@ -131,21 +131,21 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Execute API tests
-        timeout-minutes: 5
-        run: |
-          docker compose -f docker-compose-node-api-tests.yaml up --build --abort-on-container-exit || exit 0
-          docker run -d --rm --name dummy -v test-results:/tr alpine tail -f /dev/null
-          docker cp dummy:/tr/testresults.trx testresults.trx
-          docker stop dummy
-          docker compose -f docker-compose-node-api-tests.yaml rm -fsv
+      # - name: Execute API tests
+      #   timeout-minutes: 5
+      #   run: |
+      #     docker compose -f docker-compose-node-api-tests.yaml up --build --abort-on-container-exit || exit 0
+      #     docker run -d --rm --name dummy -v test-results:/tr alpine tail -f /dev/null
+      #     docker cp dummy:/tr/testresults.trx testresults.trx
+      #     docker stop dummy
+      #     docker compose -f docker-compose-node-api-tests.yaml rm -fsv
 
-      - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action/composite@v2
-        if: always()
-        with:
-          files: |
-            **/*.trx
+      # - name: Publish Test Results
+      #   uses: EnricoMi/publish-unit-test-result-action/composite@v2
+      #   if: always()
+      #   with:
+      #     files: |
+      #       **/*.trx
 
   publish-build-artifacts:
     runs-on: ubuntu-latest
@@ -181,12 +181,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Download build artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: rusa-csi-driver-host-path
+          path: ./rusa-csi-driver-host-path
 
       - name: Archive artifact
-        run: tar -czvf rusa-csi-driver-host-path.tar.gz rusa-csi-driver-host-path
+        run: |
+          ls -lsah ./
+          tar -czvf rusa-csi-driver-host-path.tar.gz ./rusa-csi-driver-host-path
 
       - name: Create GitHub Release
         id: create-release
