Exclude chart version from selector specification for deployment and daemonset

--- a/deploy/rusa-csi-driver-host-path/templates/csi-controller.yaml
+++ b/deploy/rusa-csi-driver-host-path/templates/csi-controller.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      {{- include "csi-controller-labels" . | nindent 6 }}
+      {{- include "csi-controller-selectors" . | nindent 6 }}
   replicas: 1
   template:
     metadata:
