--- a/deploy/rusa-csi-driver-host-path/templates/csi-driver.yaml
+++ b/deploy/rusa-csi-driver-host-path/templates/csi-driver.yaml
@@ -3,7 +3,8 @@ kind: CSIDriver
 metadata:
   name: {{ include "csi-name" . }}
   labels:
-    {{- include "csi-driver-labels" . | nindent 4 }}
+    {{ include "csi-common-labels" . | nindent 4 }}
+    app.kubernetes.io/component: csi-driver
 spec:
   # Supports persistent and ephemeral inline volumes.
   volumeLifecycleModes:
