--- a/deploy/rusa-csi-driver-host-path/templates/csi-storage-class.yaml
+++ b/deploy/rusa-csi-driver-host-path/templates/csi-storage-class.yaml
@@ -3,7 +3,8 @@ kind: StorageClass
 metadata:
   name: {{ include "csi-name" . }}
   labels:
-    {{- include "csi-storage-class-labels" . | nindent 4 }}
+    {{ include "csi-common-labels" . | nindent 4 }}
+    app.kubernetes.io/component: storage-class
   annotations:
     {{- if .Values.setAsDefault }}
     storageclass.kubernetes.io/is-default-class: "true"
