--- a/deploy/rusa-csi-driver-host-path/templates/csi-node.yaml
+++ b/deploy/rusa-csi-driver-host-path/templates/csi-node.yaml
@@ -42,7 +42,7 @@ spec:
           mountPath: /run/csi
         - name: registration-dir
           mountPath: /registration
-      - name: csi-driver-node
+      - name: csi-node-driver
         image: ruslansavchuk/rusa-hostpath-csi-node:{{ $.Chart.Version }}
         imagePullPolicy: Always
         env:
@@ -83,7 +83,7 @@ spec:
       # it is the place where csi node will store its data
       - name: csi-data-dir
         hostPath:
-          path: /var/lib/csi-hostpath-data/
+          path: /var/lib/csi-hostpath/data/
           type: DirectoryOrCreate
       - name: device-dir
         hostPath:
