Add ability to configure data and metadata dir for helm chart

--- a/deploy/rusa-csi-driver-host-path/templates/csi-controller.yaml
+++ b/deploy/rusa-csi-driver-host-path/templates/csi-controller.yaml
@@ -62,5 +62,5 @@ spec:
       # it is the place where csi contoller stores metadata
       - name: csi-dir
         hostPath:
-          path: /var/lib/csi-hostpath/metadata/
+          path: {{ .Values.controllerStateDir }}
           type: DirectoryOrCreate
