--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -171,7 +171,7 @@ jobs:
 
   deploy-to-dev-env:
     runs-on: ubuntu-latest
-    environment: production
+    environment: dev
     needs:
       - publish-build-artifacts
 
