--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -188,12 +188,10 @@ jobs:
           version: "v3.12.3"
 
       - name: Set-up kubernetes config
-        run: echo "${{ secrets.KUBE_CONFIG_BASE64 }}" | base64 --decode > kubeconfig.yaml
+        run: echo "${{ secrets.KUBE_CONFIG_BASE64 }}" | base64 --decode > '${{ github.workspace }}/kubeconfig.yaml'
 
       - name: Deploy Helm Chart
-        run: helm upgrade --install -n test --create-namespace csi-driver-hostpath ./rusa-csi-driver-host-path --debug
-        env:
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig.yaml
+        run: helm upgrade --install -n test --create-namespace csi-driver-hostpath --debug --kubeconfig '${{ github.workspace }}/kubeconfig.yaml' ./rusa-csi-driver-host-path
 
   release:
     needs:
