--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -187,14 +187,10 @@ jobs:
         with:
           version: "v3.12.3"
 
-      - name: Set-up kubernetes config
-        run: |
-          echo "${{ secrets.KUBE_CONFIG_BASE64 }}" | base64 --decode > '${{ github.workspace }}/kubeconfig.yaml'
-          chmod 600 '${{ github.workspace }}/kubeconfig.yaml'
-
       - name: Deploy Helm Chart
         run: |
-          cat '${{ github.workspace }}/kubeconfig.yaml'
+          echo "${{ secrets.K8S_CONFIG }}" | base64 --decode > '${{ github.workspace }}/kubeconfig.yaml'
+          chmod 600 '${{ github.workspace }}/kubeconfig.yaml'
           helm upgrade --install -n test --create-namespace csi-driver-hostpath --debug --kubeconfig '${{ github.workspace }}/kubeconfig.yaml' ./rusa-csi-driver-host-path
 
   release:
