Uncomment ephemeral in csi driver

--- a/deploy/rusa-csi-driver-host-path/templates/csi-driver.yaml
+++ b/deploy/rusa-csi-driver-host-path/templates/csi-driver.yaml
@@ -9,7 +9,7 @@ spec:
   # Supports persistent and ephemeral inline volumes.
   volumeLifecycleModes:
   - Persistent
-  # - Ephemeral
+  - Ephemeral
   # To determine at runtime which mode a volume uses, pod info and its
   # "csi.storage.k8s.io/ephemeral" entry are needed.
   podInfoOnMount: true
