--- a/src/Csi.HostPath.Node/Csi.HostPath.Node.Infrastructure/Csi.HostPath.Node.Infrastructure.csproj
+++ b/src/Csi.HostPath.Node/Csi.HostPath.Node.Infrastructure/Csi.HostPath.Node.Infrastructure.csproj
@@ -6,13 +6,22 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
-
+    <ItemGroup>
+        <Protobuf Include="..\..\..\protos\csi.proto" GrpcServices="Client" Link="Protos\csi.proto" />
+    </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Csi.HostPath.Node.Application\Csi.HostPath.Node.Application.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Google.Protobuf" Version="3.25.1" />
+      <PackageReference Include="Grpc.Net.Client" Version="2.59.0" />
+      <PackageReference Include="Grpc.Net.ClientFactory" Version="2.59.0" />
+      <PackageReference Include="Grpc.Tools" Version="2.60.0-pre1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
